<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <groupId>de.mhus.nimbus</groupId>
    <artifactId>nimbus-world</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>server</name>
    <packaging>pom</packaging>

    <modules>
        <module>plugins</module>
        <module>generated</module>
        <module>shared</module>
        <module>world-shared</module>
        <module>world-shared-ai</module>
        <module>world-player</module>
        <module>world-control</module>
        <module>world-life</module>
        <module>world-generator</module>
    </modules>

    <properties>
        <lombok.version>1.18.42</lombok.version>
        <spring.boot.version>4.1.0</spring.boot.version>
        <java.version>25</java.version>
        <!-- JUnit is not pinned here on purpose: overriding junit-jupiter.version alone
             leaves Boot's junit-platform.version untouched and the two drift apart.
             Jupiter and platform both come from spring-boot-dependencies. -->
        <!-- byte-buddy and byte-buddy-agent must stay on the same version -->
        <byte-buddy.version>1.18.11</byte-buddy.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- JUnit tags excluded from normal builds; override with -DexcludedGroups= to include them -->
        <excludedGroups>manual</excludedGroups>
        <!-- code formatting -->
        <spotless.version>3.10.2</spotless.version>
        <palantir-java-format.version>2.97.0</palantir-java-format.version>
        <!-- static code analysis -->
        <pmd-plugin.version>3.28.0</pmd-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>2.0.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Tests tagged "manual" are excluded from normal builds (they need live
                         external services / API keys). Override to run them, e.g. -DexcludedGroups= -->
                    <excludedGroups>${excludedGroups}</excludedGroups>
                    <argLine>
                        -XX:+EnableDynamicAgentLoading
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.base/java.lang.ref=ALL-UNNAMED
                        --add-opens java.base/java.nio=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens java.base/sun.security.action=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <java>
                        <palantirJavaFormat>
                            <version>${palantir-java-format.version}</version>
                        </palantirJavaFormat>
                        <importOrder/>
                        <removeUnusedImports/>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>spotless-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${pmd-plugin.version}</version>
                <configuration>
                    <!-- The build fails on new violations; the curated ruleset in
                         pmd-ruleset.xml documents which rules are consciously
                         excluded. -->
                    <failOnViolation>true</failOnViolation>
                    <printFailingErrors>false</printFailingErrors>
                    <rulesets>
                        <!-- resolved via the reactor root (nearest ancestor with a .mvn
                             directory) so every aggregator repo carries its own copy -->
                        <ruleset>${maven.multiModuleProjectDirectory}/pmd-ruleset.xml</ruleset>
                    </rulesets>
                </configuration>
                <executions>
                    <execution>
                        <id>pmd-check</id>
                        <goals>
                            <goal>pmd</goal>
                            <goal>check</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
